	vectors.

    o	spec.pgram(x, ..., pad, fast, ...) computed the periodogram with
	a bias (downward) whenever 'pad > 0' (non-default) or 'fast =
	TRUE' (default) and nextn(n) > n where n = length(x).

    o	dgamma(0, a) now gives Inf for a < 1 (instead of NaN), and
	so does dchisq(0, 2*a, ncp).

    o	pcauchy() is now correct in the extreme tails.




	**************************************************
	*						 *
	*	       1.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.1


NEW FEATURES

    o	There is now a "Complex" S3 group generic (a side-effect of
	fixing up the corresponding S4 group generic).

    o	help("regex") now gives a description of the regular expressions
	used in R.

    o	The startup message now shows the R Foundation as copyright
	holder, and includes the R ISBN number and a pointer to the new
	citation() function.

    o	The solve() function now uses the `tol' argument for all
	non-complex cases.  The default tolerance for LINPACK is 1e-7,
	as before.  For LAPACK it currently is .Machine$double.eps but
	may be changed in later versions of R.

    o	help.search() now defaults to agrep = FALSE when keyword= is
	specified, since no one wants fuzzy matching of categories.

    o	Function texi2dvi() in package tools can be used to compile
	latex files from within R.

    o	Objects with formal S4 classes saved in pre-1.8 versions and
	loaded into the current version have incompatible class
	attributes (no package information).  A new function,
	fixPre1.8() in package methods, will fix the class attributes.
	See the help for this function.

    o	heatmap() allows Rowv/Colv = NA, suppressing the corresponding
	dendrogram.

    o	An "antifeature": Tcl 8.0 is now officially unsupported. In 1.8.0
	it just didn't work. This very old version lacks several features
	that are needed for the new version of the tcltk package. R will
	still build the tcltk package against Tcl 8.0 but the resulting